# django-todo-uv

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml
.cursor/rules/: tutor0.mdc  tutor1.mdc  tutor2.mdc
.github/workflows/: ci.yml
django_todo_fullstack/: asgi.py  settings.py  urls.py  wsgi.py
documentation/: 27-10-2025-002-README.natural.md  27-10-2025-003-CLI_COMMANDS.md  27-10-2025-004-project_plans.md  27-10-2025-005-story_line.md  28-10-2025-006-sample_ci_file.md
todos/: models.py
todos/migrations/: 0001_initial.py  0002_rename_my_custom_t_status_0c4346_idx_todos_todo_status_9f7c48_idx_and_more.py  0003_rename_todos_todo_status_9f7c48_idx_todos_status_ec7fa7_idx_and_more.py  0004_alter_todo_description.py
website/: urls.py  views.py
website/static/website/css/: styles.css
website/templates/website/: about.html  base.html  contact.html  hero_svg.html  home.html  logo.html
